--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,21 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(141, 226, 247);
+  height: 100%
+}
+html {
+  background-color: rgb(141, 226, 247);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.ui.card {
+  background-color: rgb(247, 247, 247)
 }
 
 .ui.main {
-  padding-top: 60px;
+  padding-top: 80px;
+}
+
+.ui.explore {
+  padding-top: 100px;
 }
