--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
+html {
+  background-color: rgb(104, 108, 166)
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  background-color: rgb(141, 226, 247);
-  height: 100%
-}
-html {
-  background-color: rgb(141, 226, 247);
+    background-color: rgb(104, 108, 166)
+
 }
 
 .ui.card {
