--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-    background-color: rgb(104, 108, 166)
+  background-color: rgb(104, 108, 166)
 
 }
 
 .ui.card {
   background-color: rgb(247, 247, 247)
+}
+
+.ui.card.header {
+  background-color: rgb(198, 238, 255)
+}
+
+.ui.container.welcome {
+  background-color: rgb(247, 247, 247);
+  padding: 10px;
+  font-weight: bold;
+  color: rgb(252, 66, 66)
 }
 
 .ui.main {
