--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,21 @@ body {
   padding-top: 100px;
 }
 
+.card.title {
+  color: rgb(74, 74, 74);
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 1.8;
+
+}
+.card.description {
+  color: rgb(74, 74, 74);
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 1.8;
+
+}
+
 /* .MyCardElement {
   height: 40px;
   padding: 10px 12px;
