--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,45 @@ body {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
 }
+
+.chat-help-button{
+  /* padding-left: 10px;
+  padding-right: 10px;
+  color: rgb(249, 254, 3);
+  background-color: rgb(135, 135, 135);
+  border-radius: 10px;
+  border-color: rgb(249, 254, 3); */
+}
+
+#chat-icon{
+  font-size: 2em;
+}
+
+.fab-container{
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  z-index: 999;
+  cursor: pointer;
+}
+
+.fab-icon-holder{
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background: #016fb9;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 2);
+}
+
+.fab-icon-holder:hover{
+  opacity: 0.8
+}
+
+.fab-icon-holder i{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: 20px;
+  color: #ffffff
+}
