--- a/src/index.css
+++ b/src/index.css
@@ -5,26 +5,25 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-
 }
 
-.ui.image{
+.ui.image {
   align-self: center;
-  width: 100%
+  width: 100%;
 }
 
 .ui.card {
-  background-color: rgb(247, 247, 247)
+  background-color: rgb(247, 247, 247);
 }
 
 .ui.card.header {
-  background-color: rgb(198, 238, 255)
+  background-color: rgb(198, 238, 255);
 }
 
 .ui.container.welcome {
   padding: 10px;
   font-weight: bold;
-  color: rgb(252, 66, 66)
+  color: rgb(252, 66, 66);
 }
 
 .ui.container.test-login {
@@ -48,14 +47,12 @@ body {
   font-size: 20px;
   font-weight: bold;
   line-height: 1.8;
-
 }
 .card.description {
   color: rgb(74, 74, 74);
   font-size: 15px;
   font-weight: bold;
   line-height: 1.8;
-
 }
 
 /* .MyCardElement {
@@ -72,8 +69,6 @@ body {
   transition: box-shadow 150ms ease;
 } */
 
-
-
 .StripeElement {
   width: 500px;
 }
@@ -81,10 +76,10 @@ body {
 .StripeElement--focus {
   border-color: #80bdff;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
-.chat-help-button{
+.chat-help-button {
   /* padding-left: 10px;
   padding-right: 10px;
   color: rgb(249, 254, 3);
@@ -93,11 +88,11 @@ body {
   border-color: rgb(249, 254, 3); */
 }
 
-#chat-icon{
+#chat-icon {
   font-size: 2em;
 }
 
-.fab-container{
+.fab-container {
   position: fixed;
   bottom: 50px;
   right: 50px;
@@ -105,7 +100,7 @@ body {
   cursor: pointer;
 }
 
-.fab-icon-holder{
+.fab-icon-holder {
   width: 50px;
   height: 50px;
   border-radius: 100%;
@@ -113,19 +108,45 @@ body {
   box-shadow: 0 6px 20px rgba(0, 0, 0, 2);
 }
 
-.fab-icon-holder:hover{
-  opacity: 0.8
+.fab-icon-holder:hover {
+  opacity: 0.8;
 }
 
-.fab-icon-holder i{
+.fab-icon-holder i {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
   font-size: 20px;
-  color: #ffffff
+  color: #ffffff;
 }
 
-.messages{
-  width: 300px
+.messages {
+  width: 300px;
+}
+
+.wrapper {
+  position: relative;
+  float: right;
+  margin-right: 100px;
+}
+
+#main-logo {
+  z-index: 2;
+  border: 2px solid grey;
+  border-radius: 40px;
+  box-shadow: 0 0 1.75rem grey;
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  0% {
+    margin-left: 100%;
+    opacity: 0;
+  }
+  100% {
+    margin-left: 0%;
+    opacity: 1;
+  }
 }
