--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,9 @@ body {
 .ui.container.test-login {
   padding: 10px;
 }
+.ui.container.test-login p{
+  margin-left: 65px
+}
 
 .StripeElement {
   padding: 10px;
@@ -149,4 +152,10 @@ body {
     margin-left: 0%;
     opacity: 1;
   }
+}
+
+#warning-icon{
+  float: left;
+  margin: 20px;
+  color: red
 }
